Bugfix: hide overflow x

--- a/src/components/submissions/quote/QuoteSubmissionForm.module.css
+++ b/src/components/submissions/quote/QuoteSubmissionForm.module.css
@@ -58,6 +58,7 @@
     font-size: 1.5rem;
     margin-left: auto;
     margin-right: auto;
+    min-width: 80%;
     width: 100%;
     max-width: 100%;
     min-height: 10vh;
